--- a/welcome.html
+++ b/welcome.html
@@ -324,7 +324,7 @@ function forgot(userName) {
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-default" data-dismiss="modal">Try Again</button>
-				<a type="button" class="btn btn-primary" href="/">Skip It</a>
+				<a type="button" class="btn btn-primary" href="/">Cancel</a>
 			</div>
 		</div>
 	</div>
