codes now unique

--- a/buy.html
+++ b/buy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Candy Hop</title>
+<title>Game Purchasing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -53,7 +53,7 @@
 				<h4 class="modal-title">Purchase Successful!</h4>
 			</div>
 			<div class="modal-body">
-				<p>You can now visit <b style="font-size: 18px; color: blue;">playcandyhop.com</b> any time and play! Good Luck!</p>
+				<p>You can now visit <b style="font-size: 18px; color: blue;">strog.com</b> any time and play! Good Luck!</p>
 			</div>
 			<div class="modal-footer">
 				<a type="button" class="btn btn-primary" href="/welcome.html">Logout</a>&nbsp;
@@ -81,12 +81,12 @@
 </div>
 <div class="container">
 	<div class="jumbotron text-center">
-		<h1>Candy Hop</h1>
+		<h1>Purchase Games</h1>
 		<i class="fa-li fa fa-check-square-o"></i>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<p class="lead">How to Purchase Candy Hop</p>
+			<p class="lead">How to Purchase</p>
 		</div>
 	</div>
 	<div class="row">
@@ -96,7 +96,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-6" style="margin:8px;">
-			Candy Hop is $5. Please choose how to activate your account.
+			Reactor Rescue and Candy Hop together are $5. Please choose how to activate your account.
 		</div>
 	</div>
 	<div class="row">
