--- a/site/index.html
+++ b/site/index.html
@@ -58,7 +58,8 @@ a.logo:hover {
 }
 
 .gameBox {
-	height: 240px;
+	width: 27vw;
+	height: 27vw;
 	display: table;
 	text-align: center;
 	position: relative;
@@ -88,7 +89,7 @@ a.logo:hover {
 	position: absolute;
 	top: 3%;
 	right: 7%;
-	font-size: 400%;
+	font-size: 7vw;
 	font-weight: bold;
 	font-family: "luminari";
 	margin-top: 0%;
@@ -99,12 +100,15 @@ a.logo:hover {
 	animation: shadowStoneGlow 4s infinite alternate;
 }
 
-.shadowStoneFeature button {
+.shadowStoneFeature a {
 	width: 30%;
 	padding-bottom: 1%;
 	padding-top: 1%;
 	background-color: black;
 	border-radius: 10px;
+	border: 2px solid gray;
+	color: white;
+	text-align: center;
 	position: absolute;
 	top: 24%;
 	font-size: 150%;
@@ -112,8 +116,10 @@ a.logo:hover {
 	transition: all 0.2s ease-out;
 }
 
-.shadowStoneFeature button:hover {
+.shadowStoneFeature a:hover {
+	text-decoration: none;
 	background-color: #444;
+	border-color: white;
 	transition: all 0.2s ease-in;
 }
 
@@ -121,7 +127,7 @@ a.logo:hover {
 	position: absolute;
 	bottom: 3%;
 	left: 7%;
-	font-size: 240%;
+	font-size: 4vw;
 	font-weight: bold;
 	font-family: "luminari";
 	color: #aaa;
@@ -218,7 +224,7 @@ a.logo:hover {
 }
 
 .gameTitle {
-	font-size: 180%;
+	font-size: 3vw;
 	margin-top: 80%;
 }
 
@@ -277,16 +283,6 @@ nav a {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
@@ -710,7 +706,7 @@ $(document).ready( main );
 			<div class="col-md-12 shadowStoneFeature">
 				<img src="image/shadowStoneFeature.png">
 				<h4>Shadow Stone</h4>
-				<button href="/shadowStone/index.html">Play the Beta Now</button>
+				<a href="/shadowStone/index.html">Play the Beta Now</a>
 				<div>Something New in the Dark...</div>
 			</div>
 		</div>
