revert ss featured, and fix recordsRr

--- a/site/index.html
+++ b/site/index.html
@@ -725,13 +725,13 @@ $(document).ready( main );
 	<div class="container mainPage">
 		<div class="row">
 			<div class="col-md-12 shadowStoneFeature">
-				<img class='hidden' src="image/shadowStoneFeature.png">
+				<img src="image/shadowStoneFeature.png">
 				<h4>Shadow Stone</h4>
 				<a href="/shadowStone/index.html">Play the Beta Now</a>
-				<div class="shadowStoneFrame">
+				<!--div class="shadowStoneFrame">
 					<iframe src="../../shadowStone/replay.html?timeline=shortgame">
 					</iframe>
-				</div>
+				</div-->
 				<h5>Something New in the Dark...</h5>
 			</div>
 		</div>
