--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="google-site-verification" content="tPXb8rJRA5LFMef9gOHR9Ve0D-ztOHT6uu9_UhVBt9s" />
 <title>Strog Entertainment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
