--- a/site/index.html
+++ b/site/index.html
@@ -926,7 +926,7 @@ $(document).ready( main );
 			</div>
 		</div>
 		<div class="row">
-			<h2>Games</h2>
+			<h2>Video Games</h2>
 		</div>
 		<div class="row gameRow">
 			<div class="col-xs-6 col-sm-4 gameBox">
@@ -950,6 +950,9 @@ $(document).ready( main );
 					<!--a class="btn btn-info btn-lg gamePlayButton" href="/reactorRescue/index.html">Play</a-->
 				</a>
 			</div>
+			<div class="row">
+				<h2>Board Games</h2>
+			</div>
 			<div class="col-xs-6 col-sm-4 gameBox">
 				<a class="gameFrame turmoil" href="/turmoil/index.html">
 					<img src="image/turmoilCards.png">
@@ -957,6 +960,9 @@ $(document).ready( main );
 					<!--a class="btn btn-info btn-lg gamePlayButton" href="/reactorRescue/index.html">Play</a-->
 				</a>
 			</div>
+		</div>
+		<div class="row">
+			<h2>Products in Beta</h2>
 		</div>
 		<div class="row">
 			<div class="col-md-12 shadowStoneFeature">
