--- a/site/index.html
+++ b/site/index.html
@@ -925,6 +925,8 @@ $(document).ready( main );
 				<div class="turmoilBlurb">Coming to the <a target="_blank" href="https://www.childrensbusinessfair.org/austin">Acton Children’s Business Fair</a>, October 26th 10am-2pm, in central Austin at 1606 Niles Road!</div>
 			</div>
 		</div>
+	</div>
+	<div class="container">
 		<div class="row">
 			<h2>Video Games</h2>
 		</div>
@@ -950,17 +952,21 @@ $(document).ready( main );
 					<!--a class="btn btn-info btn-lg gamePlayButton" href="/reactorRescue/index.html">Play</a-->
 				</a>
 			</div>
-			<div class="row">
-				<h2>Board Games</h2>
-			</div>
-			<div class="col-xs-6 col-sm-4 gameBox">
-				<a class="gameFrame turmoil" href="/turmoil/index.html">
-					<img src="image/turmoilCards.png">
-					<div class="btn-lg gameTitle slide-left delay3 textTurmoil">TURMOIL</div>
-					<!--a class="btn btn-info btn-lg gamePlayButton" href="/reactorRescue/index.html">Play</a-->
-				</a>
-			</div>
 		</div>
+	</div>
+	<div class="container">	
+		<div class="row">
+			<h2>Board Games</h2>
+		</div>
+		<div class="col-xs-6 col-sm-4 gameBox">
+			<a class="gameFrame turmoil" href="/turmoil/index.html">
+				<img src="image/turmoilCards.png">
+				<div class="btn-lg gameTitle slide-left delay3 textTurmoil">TURMOIL</div>
+				<!--a class="btn btn-info btn-lg gamePlayButton" href="/reactorRescue/index.html">Play</a-->
+			</a>
+		</div>
+	</div>
+	<div class="container">
 		<div class="row">
 			<h2>Products in Beta</h2>
 		</div>
@@ -976,7 +982,6 @@ $(document).ready( main );
 				<h5>Something New in the Dark...</h5>
 			</div>
 		</div>
-
 	</div>
 </div>
 </body>
