learn more link

--- a/site/index.html
+++ b/site/index.html
@@ -942,7 +942,7 @@ $(document).ready( main );
 			<div class="col-md-12 turmoilFeature">
 				<a href="/turmoil"><img src="image/turmoilFeature.png"></a>
 				<div class="turmoilNotice">If you want to know when the full release happens, enter your email below!</div>
-				<button class="turmoilLearnMore">Learn More!</button>
+				<a class="turmoilLearnMore" href="/turmoil">Learn More!</a>
 				<form class="tickleForm" onsubmit="return tickleSubmit.apply(this,[]);">
 					<fieldset class="tickleFormFields tickleStyle">
 						<input name="userEmail" class="form-bit" autocapitalize="off" placeholder="Your email here" type="text" required>
