Temp accts started. Meta tags added

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="google-site-verification" content="tPXb8rJRA5LFMef9gOHR9Ve0D-ztOHT6uu9_UhVBt9s" />
+<meta name="description" content="Video and board games created by 14 year old game designer Will Demarest. Try one today!" />
+<meta property="og:title" content="Strog Games">
+<meta property="og:description" content="Video and board games created by 14 year old game designer Will Demarest. Try one today!">
+<meta property="og:image" content="http://strog.com/image/strogLogoBlackLarge.jpg">
+<meta property="og:url" content="http://strog.com">
+<meta name="twitter:title" content="Strog Games">
+<meta name="twitter:description" content="Video and board games created by 14 year old game designer Will Demarest. Try one today!">
+<meta name="twitter:image" content="http://strog.com/image/strogLogoBlackLarge.jpg">
 <title>Strog Entertainment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -501,6 +509,9 @@ nav a {
 let Cookie = {
 	set: function(name,value,days) {
 		var expires = "";
+		if( days === undefined ) {
+			days = 365*10;
+		}
 		if (days) {
 			var date = new Date();
 			date.setTime(date.getTime() + (days*24*60*60*1000));
