signup works again.

--- a/site/index.html
+++ b/site/index.html
@@ -825,10 +825,10 @@ $(document).ready( main );
 				<h4 class="modal-title">Thanks for signing up!</h4>
 			</div>
 			<div class="modal-body">
-				<p>You are nearly ready to play.</p>
+				<p>You are ready to play.</p>
 			</div>
 			<div class="modal-footer">
-				<a type="button" class="btn btn-primary" href="/buy.html">Continue</a>
+				<a type="button" class="btn btn-primary" href="/index.html">Continue</a>
 			</div>
 		</div>
 	</div>
@@ -967,7 +967,7 @@ $(document).ready( main );
 				</form>
 				<div id="tickleSuccessMessage">Thanks! We will email you when Turmoil is available!</div>
 
-				<div class="turmoilBlurb">Coming to the <a target="_blank" href="https://www.childrensbusinessfair.org/austin">Acton Children’s Business Fair</a>, October 26th 10am-2pm, in central Austin at 1606 Niles Road!</div>
+				<div class="turmoilBlurb">Coming to the <a target="_blank" href="https://www.childrensbusinessfair.org/austin">Acton Children’s Business Fair</a>, October 26th 10am-1pm, in central Austin at 1606 Niles Road!</div>
 			</div>
 		</div>
 	</div>
