--- a/site/welcome.html
+++ b/site/welcome.html
@@ -239,7 +239,7 @@ $(document).ready( function() {
 						<label class="col-xs-4 control-label"></label>
 						<div class="col-xs-4">
 							<button type="submit" class="btn btn-info">
-							<span><i class="fa fa-refresh fa-spin hidden"></i></span>
+							<span><i class="fas fa-refresh fa-spin hidden"></i></span>
 									Complete Signup Now
 							</button>
 						</div>
@@ -322,7 +322,7 @@ $(document).ready( function() {
 						<label class="col-xs-4 control-label"></label>
 						<div class="col-xs-4">
 							<button type="submit" class="btn btn-info">
-							<span><i class="fa fa-refresh fa-spin hidden"></i></span>
+							<span><i class="fas fa-refresh fa-spin hidden"></i></span>
 									Login Now
 							</button>
 						</div>
